--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,6 +1,7 @@
+<div class="mt-3"></div>
 
 <% if(success && success.length){ %>
-    <div class="alert alert-success alert-dismissible fade show col-6 offset-3" role="alert">
+    <div class="alert alert-success alert-dismissible fade show col-6 offset-3 " role="alert" >
         <h6><%= success%></h6>
         <button type="button" class="btn-close flash-btn" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
@@ -8,8 +9,8 @@
 
 
 <% if(error && error.length){ %>
-    <div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert">
-        <h6><%= error%></h6>
+    <div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert"  >
+        <h6 ><%= error%></h6>
         <button type="button" class="btn-close flash-btn" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <%}%>
