--- a/views/layout/boiler.ejs
+++ b/views/layout/boiler.ejs
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="/icon.png">
     <title>Holiday Homes &#38; &nbsp;Apartment rentals wanderlust</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Arimo:ital,wght@0,500;0,700;1,400&family=Chewy&family=Concert+One&family=Jost:wght@300&family=Merriweather+Sans:ital,wght@1,400;1,800&family=Montserrat:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@300;400;600;700&family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600&family=Racing+Sans+One&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+`   <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/rating.css">
+    <link rel="stylesheet" href="/css/booking.css">
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -22,18 +24,19 @@
         
     <%- include("../includes/navbar.ejs")%>
     <div class="user_box popbox">
-        <% if(!currUser) { %>
+        <% if(!currUser ) { %>
             <div class="user_item nav-link ">
-               <a href="/signup" class="nav-link nav_hover"> Sign up</a>
+               <a href="/listings/signup" class="nav-link nav_hover"> Sign up</a>
             </div>
             <div class="user_item nav-link">
-                <a href="/login" class="nav-link nav_hover"> Login</a>
+                <a href="/listings/login" class="nav-link nav_hover"> Login</a>
             </div>
         <% } %>
 
         <% if(currUser) { %>
             <div class="user_item nav-link">
-                <a href="/logout" class="nav-link nav_hover"> Log Out</a>
+                <a href="/listings/logout" class="nav-link nav_hover"> Log Out</a>
+                <a href="/listings/user/<%= currUser._id %>" class="nav-link nav_hover mt-3"> Profile</a>
             </div>
         <% } %> 
         <hr>
@@ -41,7 +44,7 @@
             <!-- <a class="nav-link nav_hover hide " href="/listings/new" style="margin-right: 1rem;">Your Airbnb home</a> -->
             <a href="/listings/new" class="nav-link nav_hover mb-2 remove_hide">Switch to hosting</a>
             <% if(currUser) { %>
-                <a href="/wishlist/<%= currUser._id %>" class="nav-link nav_hover"> Manage wishlist</a>
+                <a href="/listings/user/wishlist" class="nav-link nav_hover"> Manage wishlist</a>
             <%}%>    
         </div>
         <div class="user_cross">
@@ -52,12 +55,15 @@
         <a href="/listings/wishlist" class="wish_route"> <h5>Add to wishlist</h5></a>
         <div class="cross"><i class="fa-solid fa-xmark"></i></div>
     </div>
-    <div class="container-fluid pl-3 pr-3" style="min-height: 80vh;">
-        <%- include("../includes/flash.ejs")%>
-        <%- body -%>
-    </div><%- include("../includes/footer.ejs")%>
+    <div class="d-flex justify-content-center">
+        <div class=" pl-3 pr-3 m-auto"   id="middle-container" >
+            <%- include("../includes/flash.ejs")%>
+            <%- body -%>
+        </div>
+    </div>
+    <%- include("../includes/footer.ejs")%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
     
