--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,130 +1,17 @@
 <% layout('layout/boiler') -%>
-<body >
-    <div class="nav-belt m-3 p-3 mt-0 ">
-        <div class="nav_swiper">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              
-                <div class="swiper-slide">
-                    <div class="filter " >
-                        <a href="/listings/filter/Trending" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-fire"></i></div>
-                            <p class="filter-p" >Trending</p>
-                        </a>
-                    </div>
-                   <div class="filter ">
-                        <a href="/listings/filter/Rooms" class="text-dark">
-                            <div class="text-center"><i class="fa fa-bed" aria-hidden="true"></i></div>
-                            <p class="filter-p">rooms</p>
-                        </a>
-                    </div>
-                    <div class="filter  ">
-                        <a href="/listings/filter/Farms" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-cow"></i></div>
-                            <p class="filter-p">Farms</p>
-                        </a>
-                    </div>
-                    <div class="filter ">
-                        <a href="/listings/filter/Arctic" class="text-dark">
-                            <div class="text-center"><i class="fa-brands fa-galactic-republic"></i></div>
-                            <p>Arctic</p>
-                        </a>
-                    </div>
-                    <div class="filter">
-                        <a href="/listings/filter/Beach" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-umbrella-beach"></i></div>
-                            <p>Beach</p>
-                        </a>
-                    </div>
-                </div> 
-
-                <div class="swiper-slide">
-                    <div class="filter ">
-                        <a href="/listings/filter/Castles" class="text-dark">
-                            <div class="text-center"><i class="fa-brands fa-fort-awesome"></i></div>
-                            <p>castles</p>
-                        </a>
-                    </div>
-                    <div class="filter " >
-                        <a href="/listings/filter/Amazing Pools" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-person-swimming"></i></div>
-                            <p>Amazing pools</p>
-                        </a>
-                    </div>
-                    <div class="filter ">
-                        <a href="/listings/filter/Mountain" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-mountain-city"></i></div>
-                            <p>mountain</p>
-                        </a>
-                    </div>
-                    <div class="filter  ">
-                        <a href="/listings/filter/Lake" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-water"></i></div>
-                            <p>Lake</p>
-                        </a>
-                    </div>
-                    <div class="filter   " >
-                        <a href="/listings/filter/Camping" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-campground"></i></div>
-                            <p>Camping</p>
-                        </a>
-            
-                    </div>
-                </div>
-                
-                <div class="swiper-slide">
-                    <div class="filter hide">
-                        <div class="text-center"><i class="fa-solid fa-igloo"></i></div>
-                        <p>Domes</p>
-                    </div>
-                   <div class="filter ">
-                        <a href="/listings/filter/New" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-key"></i></i></div>
-                            <p class="filter-p">new</p>
-                        </a>
-                    </div>
-                    <div class="filter  ">
-                        <a href="/listings/filter/Ski-in" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-person-skating"></i></div>
-                            <p class="filter-p">ski-in/out</p>
-                        </a>
-                    </div>
-                    <div class="filter  ">
-                        <a href="/listings/filter/Towers" class="text-dark">
-                            <div class="text-center"><i class="fa-solid fa-tower-observation"></i></div>
-                            <p class="filter-p">Towers</p>
-                        </a>
-                    </div>
-                    <div class="filter ">
-                        <a href="/listings/filter/Chef's" class="text-dark">
-                            <div class="text-center"><<i class="fa-solid fa-kitchen-set"></i></div>
-                            <p class="filter-p">kitchens</p>
-                        </a>
-                    </div>
-                </div> 
-
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-        </div>
-
-        <div class="tax-toggle " >
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label font-8" for="flexSwitchCheckDefault">&nbsp; &nbsp; Display total before taxes </label>
-            </div>
-        </div>
-    </div>
+<div >
+    <%- include("../listings/nav-belt.ejs")%>
 
     <div class="row row-cols-lg-4  row-cols-md-2 row-cols-sm-1 m-3 p-3 mt-0 listing_con ">
         
         <% for(let dt of data){ %>
             <a id="listing_a" href="/listings/<%= dt._id%>" >
                 <div class="card col card-listing" styel="width:18rem">
-                    <img src="<%= dt.Images[0]%>" 
+                    <img src="<%= dt.coverImage%>" 
                        class="card-img-top" 
-                       alt="listing-iamge" 
-                       style="height:18rem">
+                       alt="listing-image" 
+                       style="height:18rem"
+                    >
                     <div class="listing_like">
                         <% let check = currUser && currUser.wishlist.includes(dt._id) ? "red" : "" %>
                         <i class="fa-solid fa-heart heart_icon <%= check%> " id ="<%= dt._id%>"  ></i>
@@ -132,10 +19,14 @@
                     <div class="card-img-overlay"> </div>
                     <div class="card-body">
                       <p class="card-text">
-                         <b><%= dt.title%></b>
-                         <br>
-                         &#8377; <%= dt.price.toLocaleString("en-IN") %>/night
-                         &nbsp;&nbsp; <i class="tax-info">+18% GST </i>
+                        <div class="row">
+                            <div class="col-9 font-w-600"><%= dt.title %></div>
+                            <div class="col-3 text-secondary font-s-1"><span class="text-right"><%= dt.ratingsAverage %><i class="fa-solid fa-star"></i> </span></div>
+                        </div>
+                        <div class="text-secondary font-s-1">
+                            &#8377; <%= dt.price.toLocaleString("en-IN") %>/night
+                            &nbsp;&nbsp; <i class="tax-info">+18% GST </i>
+                        </div>
                       </p>
                     </div>
                 </div>
@@ -144,7 +35,7 @@
         <%}%>
 
     </div>
-</body>
+</div>
 
 <script>
     let tax_toggle = document.getElementById("flexSwitchCheckDefault");
