--- a/views/listings/search.ejs
+++ b/views/listings/search.ejs
@@ -1,33 +1,39 @@
 <% layout('layout/boiler') -%>
 <script>
     let mapToken = "<%= process.env.MAP_TOKEN %>";
-    let listing = <%- JSON.stringify(data)%>;
-    let center_geometry = <%-JSON.stringify(term_geometry)%>
+    let listings = <%- JSON.stringify(listings)%>;
+    let locationcenter = <%-JSON.stringify(location)%>
 </script>
 
-<div class="search_main ">
-    <div class="search_listings p-3 m-3 ">
-        <h2 >Stay in <%= term %></h2>
-        <div class="row row-cols-lg-3 row-cols-md-2">
-        <% for(let dt of data){ %>
-            <a href="/listings/<%= dt._id%>" style="min-width: 18rem;">
-                <div class="card col card-listing" >
-                    <img src="<%= dt.Images[0]%>" 
+<div class="" style="width: 98%;">
+<div class="row ">
+    <div class="col p-3 m-3 ">
+        <h3 class="mb-3">Stay in <span class="font-w-600 border-bottom"> <%= place %></span></h3>
+        <div class="row row-cols-lg-2 row-cols-md-2">
+        <% for(let dt of listings){ %>
+            <a id="listing_a" href="/listings/<%= dt._id%>" >
+                <div class="card col card-listing">
+                    <img src="<%= dt.coverImage%>" 
                        class="card-img-top" 
-                       alt="listing-iamge" 
-                       style="height:18rem"
+                       alt="listing-image" 
+                       style="height:16rem"
+                       
                     >
-                    <div class="card-img-overlay"></div>
                     <div class="listing_like">
                         <% let check = currUser && currUser.wishlist.includes(dt._id) ? "red" : "" %>
                         <i class="fa-solid fa-heart heart_icon <%= check%> " id ="<%= dt._id%>"  ></i>
                     </div>
+                    <div class="card-img-overlay"> </div>
                     <div class="card-body">
                       <p class="card-text">
-                         <b><%= dt.title%></b>
-                         <br>
-                         &#8377; <%= dt.price.toLocaleString("en-IN") %>/night
-                         &nbsp;&nbsp; <i class="tax-info">+18% GST </i>
+                        <div class="row">
+                            <div class="col-9 font-w-600"><%= dt.title %></div>
+                            <div class="col-3 text-secondary font-s-1"><span class="text-right"><%= dt.ratingsAverage %><i class="fa-solid fa-star"></i> </span></div>
+                        </div>
+                        <div class="text-secondary font-s-1">
+                            &#8377; <%= dt.price.toLocaleString("en-IN") %>/night
+                            &nbsp;&nbsp; <i class="tax-info">+18% GST </i>
+                        </div>
                       </p>
                     </div>
                 </div>
@@ -36,10 +42,11 @@
         <%}%>
         </div>
     </div>
-    <div class="search_map ">
+    <div class="col search-map-hide ">
         <div class="row " style="height: 100%;">
             <div id="map" > </div>
         </div>
     </div>
+</div>
 </div>
 <script src="/js/search.js"></script>
