--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,140 +1,140 @@
 <% layout('layout/boiler') -%>
 <script>
-    let mapToken = "<%= process.env.MAP_TOKEN %>";
-    let listing = <%- JSON.stringify(data)%>;
+  let mapToken = "<%= process.env.MAP_TOKEN %>";
+  let listing = <%- JSON.stringify(data)%>;
 </script>
-<div class="row mt-3 row-btn  ">
-    <div class="col-8 offset-lg-2">
-        <h3 class="show_title"> <%= data.title%> </h3>
-    </div>
-    <div class="card card-listing col-8 offset-lg-2 mb-3 box_container ">
-
-        
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="<%= data.Images[0]%>" class="d-block card-img-top show-img" alt="...">
-              </div>
-              <% data.Images.remove(data.Images[0]) %>
-              <% for(url of data.Images){ %>
-                <div class="carousel-item">
-                    <img src="<%= url%>" class="d-block  card-img-top show-img" alt="...">
-                </div>
-              <% } %>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-
-
-
-
-    
-         <div class="card-body">
-            <h6 class="card-text mt-3 bold-text">
-                Hosted By : <i><%= data.owner.username%></i><br>
-            </h6>
-            <hr>
-            <p class="card-text"> <%= data.description%> </p>
-            <p class="card-text bold-text " >    
-                &#8377; <%= data.price.toLocaleString("en-IN")%> 
-            </p>    
-            <p class="card-text"> <%= data.location%> </p>
-            <p class="card-text"> <%= data.country%> </p>
-            <p class="card-text"> Category : <%= data.category%> </p>
+<div class="container-fluid">
+<div class=" mt-3 row-btn px-4">
+  <div class="col-8 offset-lg-2">
+    <h3 class="show_title"><%= data.title%></h3>
+  </div>
+  <div class="card card-listing col-8 offset-lg-2 mb-3 box_container">
+    <div
+      id="carouselExampleControls"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="<%= data.coverImage%>"
+            class="d-block card-img-top show-img"
+            alt="..."
+          />
         </div>
-            
+        <% for(url of data.images){ %>
+        <div class="carousel-item">
+          <img
+            src="<%= url%>"
+            class="d-block card-img-top show-img"
+            alt="..."
+          />
+        </div>
+        <% } %>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControls"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class="card-body">
+      <h5 class="font-w-600 summary-text"><%= data.summary%></h5>
+      <span class="text-right"
+        ><%= data.ratingsAverage %><i class="fa-solid fa-star"></i> &nbsp;&nbsp;
+        &nbsp; <%=data.ratingsQuantity%> reviews</span
+      >
+      <p><%=data.bedrooms%> Bedroom . <%= data.maxGuests%> guest</p>
+      <hr />
+      <h6 class="card-text mt-3 bold-text">
+        Host &nbsp;&nbsp;
+        <img
+          src="<%=data.owner.photo%>"
+          alt=""
+          srcset=""
+          class="owner_img"
+        />
+        <i><%= data.owner.name%></i><br />
+        <p class="card-text" style="padding-left: 7rem">
+          <i class="fa-solid fa-location-dot"></i>&nbsp; <%=
+          data.location.address%>
+        </p>
+      </h6>
+      <hr />
+      <h4 class="mt-3 mb-3 font-w-600">About This Place</h4>
+      <% let sentence= data.description.split("\n")%> <%
+      sentence.forEach(el=>{ %>
+      <p class="para_style text-align-justify"><%=el%></p>
+      <%})%>
+      <br />
+    </div>
+  </div>
+  <div class="col-8 offset-lg-2 mt-3 bg-white">
+       
+    <%- include("./amenities.ejs")%>
+
+  </div>
+  <div class="col-8 offset-lg-2 mt-3">
+    <div class="card p-3 m-3 reserve_card ">
+      <p class="font-w-600 m-3">
+        &#8377; <%= data.price.toLocaleString("en-IN")%> /night
+      </p>
+      <% if(currUser) {%>
+      <div class="reserve_div ml-3 mr-3" id="booking" data-listing-id="<%=data._id%>">Reserve</div>
+      <%}%>
+      <% if(!currUser) {%>
+       <a href="/listings/login"><div class="reserve_div ml-3 mr-3">Login To Reserve</div></a> 
+      <%}%>
+      <hr />
+      <p class="font-w-600 ml-3">
+        Total before taxes: &#8377; <%=
+        data.price.toLocaleString("en-IN")%>
+      </p>
+    </div>
+  </div>
+
+   
+  <%- include("./review.ejs")%>
+   
+    <div class="row  col-8 offset-lg-2">
+      <h4 class="bold-text mt-3 mb-3">Where you will'be</h4>
+      <div class=" mt-3 mb-3 " style="height: 400px">
+        <div id="map"></div>
+      </div>
     </div>
 
     <% if(currUser && data.owner._id.equals(currUser._id)) {%>
-        <div class="col-8  mb-3 offset-lg-2 ">
-            <a href="/listings/<%= data._id%>/edit" class="btn btn-dark edit-btn"> Edit </a>
-            <form method="POST" action="/listings/<%= data._id%>?_method=DELETE" class="d-inline ml-2">
-                <button type="submit" class="btn btn-dark  ">DELETE</button>
-            </form>
-        </div>
-    <% } %>
- 
-   <div class="col-8 offset-lg-2 mt-3  ">
-      <% if(currUser ) {%>
-       <hr>
-       <h5 class="bold-text">Leave a Review </h5>
-       <form action="/listings/<%= data._id%>/reviews" method="POST" novalidate class="needs-validation">
-            <div>
-                <label for="rating" class="from-label ">Rating</label>
-                <fieldset class="starability-slot">
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                </fieldset>
-            </div>
-            <div>
-                <label for="comment" class="form-label">Comment</label>
-                <textarea name="review[comment]" id="comment" cols="50" rows="5" class="form-control" required></textarea>
-                <div class="invalid-feedback">Please add comment in review</div>
-            </div>
-            
-            <div class="mt-3 mb-3">
-                <button type="submit" class="btn btn-outline-dark">Add</button>
-            </div>
-       </form>
-       <hr>
-       <% }%>
-      
-       <% if(data.reviews.length>0){%>
-       <div class="row ">
-       <h5><b> All Review</b></h5>
-       
-       <div class="row">
-          <% for(review of data.reviews){ %>
-            <div class="card mb-3  col-5 p-3 pb-1 review_card ">
-                <div class="card_body">
-                    <h5 class="card-title">@<%= review.author.username%></h5>
-                    <% for(let k=1;k<=review.rating;k++){ %>
-                        <i class="fa-solid fa-star"></i>
-                    <%}%>   
-                    <p class="card-text"><%= review.comment%></p>
-                </div>
-                <form action="/listings/<%= data.id%>/reviews/<%= review._id%>?_method=DELETE" method="POST" class="mb-3">
-                     <button class="btn btn-sm btn-dark mt-3">Delete</button>
-                </form>
-           </div>
-          <%}%>
-       </div>
-       </div>
-       <%}%>
-
-       <div class="row mt-3 mb-3 ">
-        <h4 class="bold-text">Where you will'be</h4>
-            <div class="row " style="height: 400px;">
-                <div id="map"> </div>
-            </div>
-       </div>
-
-   </div>
+      <div class="col-8 mb-3 offset-lg-2">
+        <a href="/listings/<%= data._id%>/edit" class="btn btn-dark edit-btn ">
+          Edit
+        </a>
+        <form
+          method="POST"
+          action="/listings/<%= data._id%>?_method=DELETE"
+          class="d-inline ml-2 "
+        >
+          <button type="submit" class="btn btn-dark ">DELETE</button>
+        </form>
+      </div>
+      <% } %>
 </div>
-
-
+</div>
+<script type="module" src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/esm/axios.min.js' integrity='sha512-7SR0pMdpJpg6weO/IAd4XykPI2WiSkrKEmeuKJspqhlA7aOKlintVvNoe3NoNf4ZPzSPQLvRX6OxN1cnpysU5A==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
+<script type="module" src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js'></script>
+<script src="https://js.stripe.com/v3/"></script>
 <script src="/js/map.js"></script>
-
-
-
-
-
-
+<script src="/js/booking.js"></script>
