--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,24 +1,25 @@
 <% layout('layout/boiler') -%>
 
-<div class="p-3 m-3">
-    <h5 class="col-6 offset-lg-3 mt-3 text-center bold-text">SignUp </h5>
-    <hr class="col-6 offset-lg-3">
-    <h2 class="col-6 offset-lg-3 bold-text">Welcome to Wanderlust</h2>
-    <div class="row">
-        <div class="col-6 offset-lg-3" >
+<div class="row justify-content-center mt-3 mb-3 ">
+<div class="p-3 m-3 signup_card ">
+    <h5 class=" mt-3  text-center bold-text">SignUp </h5>
+    <hr class=" text-center ">
+    <h2 class=" bold-text text-center">Welcome to Wanderlust</h2>
+    <div class="row justify-content-center">
+        <div class="col-10 " >
 
-            <form action="/signup"  method="POST" class="needs-validation" novalidate>
+            <form action="/listings/signup"  method="POST" class="needs-validation"  enctype="multipart/form-data" novalidate>
                 <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
+                    <label for="username" class="form-label font-w-600">Username</label>
                     <input type="text"
-                     name="username"  
+                     name="name"  
                     class="form-control"
                     id="username"
                     required>
                     <div class="valid-feedback">Looking Good !</div>
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Enter Email</label>
+                    <label for="email" class="form-label font-w-600"> Email Address</label>
                     <input type="email"
                        name="email"  
                        class="form-control"
@@ -27,7 +28,7 @@
                     >
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Create a Password</label>
+                    <label for="password" class="form-label font-w-600">Create a Password</label>
                     <input type="password"
                       name="password"  
                       class="form-control"
@@ -35,8 +36,27 @@
                        required
                     >
                 </div>
-                <button class="btn btn-success">Create a account</button>
+                <div class="mb-3">
+                    <label for="passwordConfirm" class="form-label font-w-600">Confirm Password</label>
+                    <input type="password"
+                      name="passwordConfirm"  
+                      class="form-control"
+                      id="passwordConfirm"
+                       required
+                    >
+                </div>
+                
+                <div class="mb-3">
+                    <label for="photo" class="form-label font-w-600">Upload a Photo</label>
+                    <input type="file"
+                      name="photo"  
+                      class="form-control"
+                      id="photo"
+                    >
+                </div>
+                <button class="btn btn-danger mt-3 mb-3 loginbtn btn_full">Create  account</button>
             </form>
         </div>
     </div>
+</div>
 </div>
